--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.1.210.38:9980/mithuntechnologies/repository/wallmart-snapshot/</url>
+	      <url>http://http://54.146.221.223:9000/mithuntechnologies/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
